--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "express": "^4.14.0",
     "mongoose": "^4.5.5"
+  },
+  "dependencies": {
+    "express-logging": "^1.1.1",
+    "logops": "^1.0.1"
   }
 }
