--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,14 @@
   "author": "AET 2016 interns",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.14.0",
-    "mongoose": "^4.5.5"
+    "express": "^4.14.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express-logging": "^1.1.1",
-    "logops": "^1.0.1"
+    "logops": "^1.0.1",
+    "sequelize": "^3.23.6",
+    "sequelize-cli": "^2.4.0",
+    "sqlite3": "^3.1.4"
   }
 }
