--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-jscs": "^1.8.0",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
+    "grunt-nodemon": "^0.4.2",
     "grunt-postcss": "^0.5.5",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
@@ -32,7 +33,17 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "phantomjs-prebuilt": "^2.1.9",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+
+    "express": "^4.14.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express-logging": "^1.1.1",
+    "logops": "^1.0.1",
+    "sequelize": "^3.23.6",
+    "sequelize-cli": "^2.4.0",
+    "sqlite3": "^3.1.4"
   },
   "engines": {
     "node": ">=0.10.0"
