--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
+    "express": "^4.14.0",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
+    "grunt-connect-proxy": "^0.2.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
@@ -33,9 +35,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "phantomjs-prebuilt": "^2.1.9",
-    "time-grunt": "^1.0.0",
-
-    "express": "^4.14.0"
+    "time-grunt": "^1.0.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
