--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap-calendar": "^0.19.6"
+    "angular-bootstrap-calendar": "^0.19.6",
+    "jquery-ui": "^1.12.0",
+    "bootstrap-timepicker": "^0.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
