--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "fabric.js": "fabric#^1.6.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
