--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
+    "babel-preset-es2015": "^6.13.2",
     "express": "^4.14.0",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
+    "grunt-babel": "^6.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
