--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express-logging": "^1.1.1",
-    "logops": "^1.0.1",
+    "morgan": "^1.7.0",
     "sequelize": "^3.23.6",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.4"
