--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.5.0",
     "sequelize": "^3.23.6",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.4"
