--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,20 +1,12 @@
 {
   "development": {
     "dialect": "sqlite",
+
     "storage": "./db.development.sqlite"
   },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+
+    "storage": "/home/pi/AmExHackathon/api/db.development.sqlite"
   }
 }
