--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "body-parser": "^1.15.2",
     "morgan": "^1.7.0",
     "nodemailer": "^2.5.0",
-    "sequelize": "^3.23.6",
-    "sequelize-cli": "^2.4.0",
-    "sqlite3": "^3.1.4"
+    "sequelize": "^3.23.6"
   },
   "engines": {
     "node": ">=0.10.0"
